test adding nonsense 2

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <h1>
             Hello, {formatName(user)}!
         </h1>
+        <h2>check console for output, thank you</h2>
     </header>
 
 
